# preesm

./: .gitignore  .mailmap  .project  .travis.yml  Jenkinsfile  README.md  plugin.xml  pom.xml  release_notes.md  release_notes_BACKUP_12818.md  release_notes_REMOTE_12891.md  split.bsh
.github/workflows/: build.yml  check_master.yml
codegen/: plugin.xml
core/: .classpath  .project  build.properties  plugin.xml
core/schema/: tasks.exsd
doc/: .gitignore  acronyms.tex  workflow_tasks.bib  workflow_tasks.tex
feature/: .project  feature.xml
fpga_scheduler/: .project
libs/include/: delay.h
libs/src/: delay.c
mapper/: .classpath  build.properties  plugin.xml
mapper/examples/: TestCom.xml
org.abo.preesm.plugin.dataparallel/: .classpath  plugin.xml
org.ietr.preesm.complete.site/: .project  HowToRelease.md  category.xml  index.html  pom.xml  site.xml
org.ietr.preesm.experiment.memory/: .project  build.properties  plugin.xml
org.ietr.preesm.experiment.memory/scripts/: broadcast.bsh  fork.bsh  join.bsh  roundbuffer.bsh  split.bsh
org.ietr.preesm.feature/: .project  build.properties  feature.xml  pom.xml
org.ietr.preesm.product/: .project  org.ietr.preesm.product  org.ietr.preesm.rcp.product  pom.xml
org.ietr.preesm.rcp/: .project  Application.e4xmi  build.properties  org.ietr.preesm.rcp.product  plugin.xml  pom.xml
org.ietr.preesm.rcp.utils/: .project  build.properties  plugin.xml  pom.xml
org.ietr.preesm.rcp.utils/icons/: Logo_preesm.xcf  preesmLogo.ppm
org.ietr.preesm.releng/: .project  pom.xml
plugins/: .project  pom.xml
plugins/architransfo/: .project  build.properties  plugin.xml
plugins/codegen/: .classpath  .project  build.properties  plugin.xml
plugins/fi.abo.preesm.dataparallel/: .classpath  .project  build.properties  plugin.xml  pom.xml
plugins/fpga_scheduler/: .classpath  plugin.xml
plugins/mapper/: .classpath  .project  build.properties  plugin.xml
plugins/org.ietr.dftools.algorithm/: pom.xml
plugins/org.ietr.dftools.architecture/: build.properties  plugin.properties  plugin.xml  pom.xml
plugins/org.ietr.dftools.architecture.ui/: pom.xml
plugins/org.ietr.dftools.ui/: build.properties  plugin.xml  pom.xml
plugins/org.ietr.dftools.workflow/: plugin.xml  pom.xml
plugins/org.ietr.preesm.algorithm/: .classpath  .project  build.properties  plugin.xml  pom.xml
plugins/org.ietr.preesm.algorithm.optimization/: .project  plugin.xml
plugins/org.ietr.preesm.archi/: .project  build.properties  plugin.xml  pom.xml
plugins/org.ietr.preesm.architecture/: .classpath  .project  plugin.xml
plugins/org.ietr.preesm.cli/: .project  plugin.xml  (+2 more)
releng/: .project  README.md  VAADER_checkstyle.xml  VAADER_eclipse_preferences.epf  auto_convert_encoding_and_lineendings.sh  build_and_test.sh  build_product.sh  copyright_template.txt  deploy.sh  fetch-rcptt-runner.sh  fix_header_copyright_and_authors.sh  pom.xml  preesm_setup.sh  release.sh  run_checkstyle.sh  snapshot_predeploy.sh  update-version.sh
site/: .project  artifacts.xml  compositeArtifacts.xml  compositeContent.xml  content.xml  generate_p2.bat  index.html  site.xml
test-fragments/: pom.xml
tests/: .project  pom.xml
tests/org.ietr.preesm.test.it/resources/org.ietr.preesm.stereo/Code/: CMakeCodeblock.bat  CMakeLists.txt  CMakeVS2013.bat
tests/org.ietr.preesm.test.it/resources/org.ietr.preesm.stereo/Code/include/: aggregateCost.h  costConstruction.h  medianFilter.h  memory.h  ppm.h  sink.h  yuv2RGB.h  yuvRead.h
tests/org.ietr.preesm.test.it/resources/org.ietr.preesm.stereo/Code/src/: aggregateCost.c  census.c  communication.c  computeWeights.c  costConstruction.c  disparityGen.c  disparitySelect.c  displayRGB.c  dump.c  fifo.c  offsetGen.c  ppm.c  rgb2Gray.c  sink.c  splitMerge.c  yuv2RGB.c  yuvRead.c
tests/org.preesm.test.it/resources/org.ietr.preesm.loopgen-sobel-erosion-dilation/CodeC6678/yuv2dat/: CMakeLists.txt  CMakeVC2008.bat
tests/org.preesm.test.it/resources/org.ietr.preesm.loopgen-sobel-erosion-dilation/CodeC6678/yuv2dat/src/: main.c
tests/org.preesm.tests.integration/resources/org.ietr.preesm.sobel-morpho.partitioner/Code/: CMakeGCC.sh  CMakeLists.txt
tests/org.preesm.tests.integration/resources/org.ietr.preesm.sobel-morpho.partitioner/Code/Scripts/: split.bsh
tests/org.preesm.tests.integration/resources/org.ietr.preesm.sobel-morpho.partitioner/Code/dat/: .gitignore  ReadMe.md
tests/org.preesm.tests.integration/resources/org.ietr.preesm.sobel-morpho.partitioner/Code/include/: preesm.h  yuvDisplay.h  yuvRead.h
tests/org.preesm.tests.integration/resources/org.ietr.preesm.sobel-morpho.partitioner/Code/src/: clock.c  yuvDisplay.c  yuvRead.c
tutorials/: preparealltutoszip.sh  preparetutozip.sh
tutorials/tutorial-sobel/Code/: CMakeCodeblock.bat  CMakeGCC.sh  CMakeLists.txt  CMakeVC2008.bat
tutorials/tutorial-sobel/Code/IDL/: readYuv.idl  sobel.idl
tutorials/tutorial-sobel/Code/Scripts/: split.bsh
tutorials/tutorial-sobel/Code/include/: clock.h  communication.h  displayYUV.h  dump.h  fifo.h  memory.h  readYUV.h  sobel.h  splitMerge.h  x86.h  yuvDisplay.h
tutorials/tutorial-sobel/Code/lib/: ReadMe.txt
tutorials/tutorial-sobel/Code/src/: clock.c  communication.c  dump.c  fifo.c  main.c  readYUV.c  sobel.c  splitMerge.c  yuvDisplay.c  yuvRead.c
tutorials/tutorial1/Code/x86/: CMakeCodeblock.bat  CMakeGCC.sh  CMakeLists.txt
tutorials/tutorial1/Code/x86/Visual/: tutorial1.sln  tutorial1.vcproj
tutorials/tutorial1/Code/x86/Visual/Example_TCP/: Executable_Solution.sln
tutorials/tutorial1/Code/x86/Visual/Example_TCP/Executable_Solution/: Executable_Solution.vcproj  TestCom.c  testcomSources.c  testcomSources.h
tutorials/tutorial1/Code/x86/Visual/Lib_com/src/: OS_Com.c  PC_x86_SEM.c
tutorials/tutorial1/Code/x86/Visual/OS_Com/: Os_Com.vcproj
tutorials/tutorial1/Code/x86/include/: OS_Com.h  communication.h  testcomSources.h  x86.h
tutorials/tutorial1/Code/x86/src/: OS_Com.c  PC_x86_TCP.c  communication.c  dump.h  fifo.c  main.c  tcp.c  testComSources.c  tutorial1.c  x86.h
workflow/: .classpath  .project  build.properties  plugin.xml
(+9968 files in other folders)
